updated code of second week

--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
                     <p>Gaming service 3.</p>
                 </div>
             </section>
-            <<<<<<< HEAD=======>>>>>>> 19f36c1ef093cd93f6128b0b09f6b12606061f61
-                <section id="cards" class="card-grid-section" role="region" aria-labelledby="cards-heading">
-                    <div class="card" role="article">
-                        <h3>Card 1</h3>
-                        <p>Some content here.</p>
-                    </div>
-                    <div class="card" role="article">
-                        <h3>Card 2</h3>
-                        <p>Some content here.</p>
-                    </div>
-                    <div class="card" role="article">
-                        <h3>Card 3</h3>
-                        <p>Some content here.</p>
-                    </div>
-                </section>
-                <<<<<<< HEAD </div>
 
-                    <aside class="sidebar" role="complementary">
-                        <h3>Top Game of 2024</h3>
-                        <ul>
-                            <li>God of war</li>
-                            <li>Assassin's Creed</li>
-                            <li>Call of Duty: Black Ops 6</li>
-                        </ul>
-                    </aside>
+            <section id="cards" class="card-grid-section" role="region" aria-labelledby="cards-heading">
+                <div class="card" role="article">
+                    <h3>Card 1</h3>
+                    <p>Some content here.</p>
+                </div>
+                <div class="card" role="article">
+                    <h3>Card 2</h3>
+                    <p>Some content here.</p>
+                </div>
+                <div class="card" role="article">
+                    <h3>Card 3</h3>
+                    <p>Some content here.</p>
+                </div>
+            </section>
+        </div>
+
+        <aside class="sidebar" role="complementary">
+            <h3>Top Game of 2024</h3>
+            <ul>
+                <li>God of war</li>
+                <li>Assassin's Creed</li>
+                <li>Call of Duty: Black Ops 6</li>
+            </ul>
+        </aside>
     </section>
 
 
@@ -96,8 +96,7 @@
                     <input type="submit" value="Submit" id="submit">
                 </div>
             </form>
-            =======
-            >>>>>>> 19f36c1ef093cd93f6128b0b09f6b12606061f61
+
         </div>
 
         <aside class="sidebar" role="complementary">
@@ -109,7 +108,7 @@
             </ul>
         </aside>
     </section>
-    <<<<<<< HEAD <section class="faq-section">
+    <section class="faq-section">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-item">
             <button class="faq-question">how to install god of war crack?</button>
@@ -138,14 +137,10 @@
                 <p>this is the process for install the game.</p>
             </div>
         </div>
-        </section>
-
-        =======
-
-        >>>>>>> 19f36c1ef093cd93f6128b0b09f6b12606061f61
-        <footer role="contentinfo">
-            <p>&copy; 2024 Your Website</p>
-        </footer>
+    </section>
+    <footer role="contentinfo">
+        <p>&copy; 2024 Your Website</p>
+    </footer>
 
 </body>
 
