updated code of second week

--- a/index.html
+++ b/index.html
@@ -98,21 +98,12 @@
             </form>
 
         </div>
-
-        <aside class="sidebar" role="complementary">
-            <h3>Top Game of 2024</h3>
-            <ul>
-                <li>God of war</li>
-                <li>Assassin's Creed</li>
-                <li>Call of Duty: Black Ops 6</li>
-            </ul>
-        </aside>
     </section>
     <section class="faq-section">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-item">
             <button class="faq-question">how to install god of war crack?</button>
-            <div class="faq-answer">
+            <div class="faq-answer">git add .
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                     when an unknown printer took a galley of type and scrambled it to make a type specimen book.
